# c3techie-fastapi-kit

./: .dockerignore  .flake8  .gitignore  CONTRIBUTING.md  CREATE_SUPERADMIN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: cd.yml  ci.yml
src/app/: config.py  dependencies.py  main.py
src/app/api/: deps.py
src/app/api/routes/: health.py
src/app/api/routes/v1/: admin.py  auth.py  router.py  users.py
src/app/core/: exceptions.py  middleware.py  password_policy.py  permissions.py  rate_limiter.py  sanitizer.py  security.py
src/app/db/: session.py
src/app/db/migrations/: env.py  script.py.mako
src/app/db/migrations/versions/: 0a107e81f8ae_initial_migration.py  be08e6172a67_add_admin_model.py
src/app/domains/shared/crud/: admin.py  audit_log.py  user.py
src/app/domains/shared/models/: __init__.py  admin.py  audit_log.py  base.py  password_reset.py  user.py
src/app/domains/shared/schemas/: admin.py  audit_log.py  user.py
src/app/domains/shared/services/: admin_service.py  auth_service.py  user_service.py
src/app/utils/: cache.py  date.py  email.py  logging.py  validators.py
tests/: conftest.py
tests/api/: test_health.py
