[project]
name = "c3techie-fastapi-kit"
version = "0.1.0"
description = ""
authors = [
    {name = "C3Techie",email = "christianchibuike14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-jose (>=3.4.0,<4.0.0)",
    "pydantic[dotenv] (>=2.11.4,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "tortoise-orm (>=0.25.0,<0.26.0)",
    "databases (>=0.9.0,<0.10.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "httpx>=0.28.1,<0.29.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "flake8>=7.2.0,<8.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "isort>=5.13.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
